# guitarhub

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  SECURITY.md  TODO.md  catalog-reverb.json  guitarhub-plan-v6.md  guitarhub.db  guitarhub.db-shm  guitarhub.db-wal  latest.json  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.json  vitest.config.ts  vitest.e2e.config.ts
.cargo/: audit.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  e2e.yml  release.yml  scrape.yml
coverage/: clover.xml  coverage-final.json  index.html
coverage/GuitarHub/: index.html  svelte.config.js.html  vitest.e2e.config.ts.html
coverage/GuitarHub/e2e-tests/: index.html  wdio.conf.ts.html
docs/: ARCHITECTURE.md  CONTRIBUTING.md  RELEASE.md
docs/adr/: 001-offline-first-sqlite-fts5.md  002-clean-architecture-rust.md  003-ports-and-adapters-scraper.md  004-csp-security-headers.md  005-store-connections.md
docs/design/: components.md  tokens.json
docs/skills/adr/: SKILL.md
docs/skills/design-system/: SKILL.md
docs/skills/doc-sync/: SKILL.md
docs/skills/rust-backend/: SKILL.md
docs/skills/scraper-adapter/: SKILL.md
docs/skills/security-review/: SKILL.md
docs/skills/svelte-frontend/: SKILL.md
e2e-tests/: wdio.conf.ts
e2e-tests/fixtures/: seed.db
e2e-tests/specs/: 01-app-launch.spec.ts  02-search.spec.ts  03-sync.spec.ts  04-collection.spec.ts  05-settings.spec.ts  06-dashboard.spec.ts  07-filters.spec.ts
e2e-tests/utils/: seedDb.test.ts  seedDb.ts  selectors.ts
openspec/: config.yaml
openspec/changes/4-sprint-mvp-roadmap/: exploration.md  proposal.md  tasks.md
openspec/changes/4-sprint-mvp-roadmap-sprint2/: proposal.md  tasks.md
openspec/changes/4-sprint-mvp-roadmap-sprint3/: proposal.md  tasks.md  verify-report.md
openspec/changes/4-sprint-mvp-roadmap-sprint4/: proposal.md  tasks.md
openspec/changes/archive/: fix-v4-findings.md  mvp-hardening.md  mvp-ui.md  plan-v3-revision.md
openspec/changes/ci-pipeline-fix-all-issues/: design.md  proposal.md  tasks.md
openspec/changes/clippy-fix/: design.md  proposal.md  tasks.md
openspec/changes/docs-audit/: proposal.md
openspec/changes/guitarhub-offcanvas-menu/: design.md  proposal.md
openspec/changes/guitarhub-redesign/: tasks.md
openspec/changes/mvp-completion/: tasks.md
openspec/changes/mvp-fixes/: tasks.md
openspec/explorations/: analysis-inicial.md  audit-errors.md
openspec/specs/scraper/: spec.md
openspec/verify/: fix-condition-normalization.md
scraper/: __main__.py  cli.py  domain.py  ports.py  pyproject.toml  requirements.txt
scraper/adapters/: guitarcenter.py  reverb.py
scraper/tests/contract/: test_protocol.py
scraper/tests/fixtures/: guitarcenter-sample.json  reverb-sample.html  reverb-sample.json
scraper/tests/unit/: test_domain.py  test_guitarcenter.py  test_reverb.py
scripts/: generate_latest_json.py
scripts/packaging/: com.guitarhub.app.desktop  com.guitarhub.app.metainfo.xml  fdroid-reproducible-build.md
scripts/tests/: test_generate_latest_json.py
src/: app.html  setupTests.ts
src-tauri/: .cargo-audit.toml  Cargo.toml  tauri.conf.json
src-tauri/.cargo/: audit.toml
src-tauri/capabilities/: community.json  default.json  updater.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: auth_command.rs  collection_command.rs  community_command.rs  dashboard_command.rs  export_command.rs  image_command.rs  mod.rs  price_command.rs  product_command.rs  profile_command.rs  search_command.rs  settings_command.rs  store_command.rs  sync_command.rs  url_command.rs  wishlist_command.rs
src-tauri/src/domain/: mod.rs  product.rs  store.rs
src-tauri/src/repository/: collection.rs  dashboard.rs  mod.rs  price_drop_notifications.rs  price_history.rs  product.rs  settings.rs  wishlist.rs
src-tauri/src/repository/sqlite/: image_cache.rs  mod.rs  settings.rs
src-tauri/src/repository/sqlite/migrations/: 001_init.down.sql  001_init.sql  002_add_url_validation.down.sql  002_add_url_validation.sql  003_add_image_cache.down.sql  003_add_image_cache.sql  004_add_price_source.down.sql  004_add_price_source.sql  005_add_settings.down.sql  005_add_settings.sql  006_wishlist_schema.down.sql  006_wishlist_schema.sql  007_price_drop_notifications.down.sql  007_price_drop_notifications.sql  008_collection_items.down.sql  008_collection_items.sql  009_add_recent_searches.down.sql  009_add_recent_searches.sql  010_community_schema.down.sql  010_community_schema.sql  011_soft_delete.down.sql  011_soft_delete.sql  012_store_connections.down.sql  012_store_connections.sql  mod.rs  test_community_migration.rs
src-tauri/src/services/: alert_service.rs  auth_service.rs  community_service.rs  connection_manager.rs  export_service.rs  image_cache.rs  mod.rs  price_drop.rs  product_query.rs  profile_service.rs  reverb_api.rs  search.rs  store_registry.rs  sync.rs  user_sync.rs
src-tauri/tests/: integration_test.rs
src-tauri/tests/fixtures/: sample_catalog.json
src/routes/: +layout.svelte  +page.svelte
(+395 files in other folders)
