[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "guitarhub-scraper"
version = "0.1.0"
description = "Catalog scraper for GuitarHub — Ports & Adapters pattern"
requires-python = ">=3.12"
authors = [{ name = "GuitarHub Contributors" }]
license = { text = "MIT" }
