[package]
name = "guitarhub"
version = "0.1.0"
edition = "2021"

[lib]
name = "guitarhub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
tauri = { version = "2", default-features = false, features = [] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
dashmap = "6"
sha2 = "0.10"
base64 = "0.22"
infer = "0.18"

[dev-dependencies]
httpmock = "0.7"
