[package]
name = "guitarhub"
version = "0.1.0"
edition = "2021"

[lib]
name = "guitarhub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1"
tauri = { version = "2", default-features = false, features = ["wry"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dashmap = "6"
sha2 = "0.11"
base64 = "0.22"
url = "2"
zip = "4"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
async-trait = "0.1"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
httpmock = "0.8.3"
tempfile = "3"
