[package]
name = "guitarhub"
version = "0.6.0"
edition = "2021"

[lib]
name = "guitarhub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "sqlite", "derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
thiserror = "2.0.18"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1"
tauri = { version = "2", default-features = false, features = ["wry"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dashmap = "6"
sha2 = "0.11"
base64 = "0.22"
url = "2"
zip = "8"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
async-trait = "0.1"
aes-gcm = "0.10"
keyring = "4"
rand = "0.9"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
httpmock = "0.8.3"
tempfile = "3"
